# online-mart

./: compose.yaml
docs/: product-service-milestone.md
order_service/: Dockerfile.dev  pyproject.toml
order_service/order_service/: main.py
product-service/: Dockerfile.dev
product-service/app/: deps.py  main.py
product-service/app/crud/: product_crud.py
product-service/app/models/: product_model.py
todo/: Dockerfile.dev  pyproject.toml
