[tool.poetry]
name = "product-service"
version = "0.1.0"
description = ""
authors = ["Ammara Gul <umaraaziz456@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
